--- a/css/background-color-ex1.html
+++ b/css/background-color-ex1.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+    <title>백그라운드   </title>
     <style>
         .mydiv{
             width: 100%;
@@ -10,6 +11,7 @@
             font-size: 100px;
             color: #2200ee; /* #2200ee */
         }
+        
     </style>
 </head>
 <body>
