--- a/css/border-ex1.html
+++ b/css/border-ex1.html
@@ -5,7 +5,7 @@
         .mydiv{
             height:200px;
             background-color:yellow;
-            border: 20px  dotted  red;
+            border: 20px  dotted red;
         }
 
     </style>
@@ -13,4 +13,4 @@
 <body>
     <div class="mydiv"></div>
 </body>
-</html>
+</html>s
