--- a/css/display-flex-align-items-ex1.html
+++ b/css/display-flex-align-items-ex1.html
@@ -14,6 +14,7 @@
         }
         #div2{
             width:100px;
+            height:150px;
             background-color: yellow;
             flex: 1;
             /* 0+a */
@@ -36,7 +37,7 @@
         .container{
             display: flex;
             height: 500px;
-            justify-content: space-around;
+            justify-content:space-around;
             align-items: baseline ;
         }
 
