--- a/css/link-ex1.html
+++ b/css/link-ex1.html
@@ -6,7 +6,7 @@
 </head>
 <a href="http://www.daum.net">daum</a>
 <a href="http://www.daum.net" target="_blank">daum</a>
-<a href="http://www.duck.com"></a>
+<a href="http://www.duck.com">duck</a>
 <body>
 </body>
 </html>
