--- a/html/block_inline_ex1.html
+++ b/html/block_inline_ex1.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h1 style="background-color: chocolate">Lorem, ipsum dolor.</h1>
-    <p style="background-color: gold;">Lorem ipsum dolor sit amet.</p>
+    <h1 style="background-color: chocolate">Lorem, ipsum dolor.></h1>
+    <p style="background-color: gold;">Lorem, ipsum dolor.</p>
+
 
     <a href="#">daum</a>
-    <a href="#">naver</a>      
-    <img src="코로나.jpg", alt="">
+    <a href="#">naver</a>
 
-    <p><span style="font-size:20px;"> L</span>orem ipsum dolor sit amet.</p>
+        <img src="코로나.jpg" alt="이건 또?">
 
-    <div style="background-color: goldenrod;">Lorem ipsum dolor sit amet.</div>
-    <div style="background-color: blue;">laboriosam commodi eius sequi aipisci?</div>
+        <p><span style="font-size:20px;"></span>Lorem ipsum dolor sit.</p>
+
+        <div style="background-color: goldenrod">Lorem, ipsum dolor.</div>
+        <div style="background-color: blue">Lorem, ipsum dolor.</div>
 </body>
 </html>
