--- a/html/css-external-ex2.html
+++ b/html/css-external-ex2.html
@@ -3,6 +3,13 @@
 <head>
    
  <link rel="stylesheet" href="mystyle.css">
+<style>
+    p{
+        font-size: 30px;
+        background-color: aquamarine;
+
+    }
+</style>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex aperiam adipisci id eius. Facilis, alias? Non, consequuntur suscipit laboriosam excepturi id aliquid saepe dignissimos alias reiciendis labore voluptate, accusamus ipsam?</p>
