--- a/html/form-label-ex1.html
+++ b/html/form-label-ex1.html
@@ -8,28 +8,28 @@
 <body>
     <label for="name">
         이름
-    </label>    
+    </label>
     <input type="text" id="name">
     <br>
     <label for="berry">
-    딸기
+        딸기
     </label>
     <input type="checkbox" id="berry">
     <br>
     <label for="banana">
-    바나나
+        바나나
     </label>
-    <input type="checkbox"  id="banana">
+    <input type ="checkbox" id="banana">
     <br>
     <label for="country_code">
-    나라이름
+        나라이름
     </label>
-    <input type="text " id="country_code" >
+    <input type="number" id="country_code" >
     <br>
     <label for="points">
-    Points
+    points
     </label>
     <input type="number" id="points">
     <br>
-    </body>
+</body>
 </html>
