--- a/html/form-select-ex1.html
+++ b/html/form-select-ex1.html
@@ -15,7 +15,7 @@
         <option value="e">Perspiciatis.</option>
     </select>
     <input type="text" name="firstName" id="">
-    <input type="submit"value="제출">
+    <input type="submit">
     
 </body>
 </html>
