--- a/javascript/first-javascript3.html
+++ b/javascript/first-javascript3.html
@@ -5,16 +5,16 @@
     </style>
 </head>
 <body>
-<button
-onclick
-="document.getElementById('myImage').src='pic_bulboff.gif'">
-Turn Off
-</button>
-<button
-onclick
-="document.getElementById('myImage').src='pic_bulbon.gif'"
->Turn On</button>
-<img id="myImage" src="pic_bulboff.gif" alt="">
-
+    <button 
+    onclick="document.getElementById('myImage').src='pic_bulboff.gif'">
+    Turn off
+    </button>
+    <button
+    onclick="document.getElementById('myImage').src='pic_bulbon.gif'">
+    Turn On
+    </button>
+    <img id="myImage" src="pic_bulboff.gif" alt="">
+    
+    
 </body>
 </html>
