--- a/javascript/first-javascrpt.html
+++ b/javascript/first-javascrpt.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
     </style>
 </head>
 <body>
     <h2>My First JavaScript</h2>
-    <button onclick="document.getElementById('demo').innerHTML=Date()">
-    Click ME!
+    <button onclick="document.getElementById('demo').innerHTML=Date()">Click me
     </button>
-    <P id="demo"></P>
+    <p id="demo"></p>
+
 </body>
 </html>
