--- a/html/form-input.ex1.html
+++ b/html/form-input.ex1.html
@@ -10,34 +10,29 @@
         <input type="text">
     </div>
     <div>
-          tyoe="number"
-        <input type="number">      
-    </div> 
-    <div>
+        type="number"
+        <input type="number">
 
+    </div>
+    <div>
         type="button"
         <input type="button" value="click">
     </div>
     <div>
-        type="checkbox"
-        <input type="checkbox" name="bus">
-        <input type="checkbox" name="bus">
-        <input type="checkbox" name="bus">
-        <input type="checkbox" name="bus">
 
+        type="check box"
+        <input type="checkbox" name="아무것">
+        <input type="checkbox" name="아무것">
+        <input type="checkbox" name="아무것">
+        <input type="checkbox" name="아무것">
     </div>
-    <div>
 
+    <div>
         type="radio button"
-        <input type="radio" name="hey">
-        <input type="radio" name="hey">
-        <input type="radio" name="hey">
-        <input type="radio" name="hey">
+        <input type="radio" name="hi">
+        <input type="radio" name="hi">
+        <input type="radio" name="hi">
+        <input type="radio" name="hi">
     </div>
-    <div>
-         type="submit"
-         <input type="submit"value="등록">
-    </div>
-  
 </body>
 </html>
