--- a/html/heading-ex1.html
+++ b/html/heading-ex1.html
@@ -9,7 +9,7 @@
     <h5>제목 5</h5>
     <h6>제목 6</h6>
 
-    <h1 style="front-size: 60px;"> 큰 제목 글씨</h1>
+    <h1 style="font-size: 60px;"> 큰 제목 글씨</h1>
   
 </body>
 </html>
