--- a/practice/rps.html
+++ b/practice/rps.html
@@ -50,7 +50,7 @@
                 document.getElementById("result").innerHTML="이겼습니다."; 
                 console.log('4');
             } else if(id == 'scissors'&& fileName =='rps1.png') {
-                document.getElementById("result").innerHTML="비겼습니다.";
+                document.getElementById("result").innerHTML="졌습니다..";
                 console.log('5');
             }else if(id == 'scissors' && fileName == 'rps3.png') {
 
@@ -59,10 +59,10 @@
             }
         
 
-            if(id=='paper'&& fileName=='rps1.png'){
+            if(id=='paper'&& fileName=='rps3.png'){
                 document.getElementById("result").innerHTML="이겼습니다."; 
                 console.log('7');
-            } else if(id == 'paper'&& fileName =='rps3.png'){
+            } else if(id == 'paper'&& fileName =='rps1.png'){
                 document.getElementById("result").innerHTML="졋습니다.";
                 console.log('8');
             }else if(id == 'paper' && fileName == 'rps2.png') {
