--- a/javascript/if-ex6-else-if.html
+++ b/javascript/if-ex6-else-if.html
@@ -7,21 +7,21 @@
 </head>
 <body>
     <input type="number" id="score"><br>
-    <button onclick="Show()">등급 확인</button>
+    <button onclick="show()">등급 확인</button>
     <p id="result"></p>
     <script>
-        function Show(){
+        function show(){
             var score=document.getElementById("score").value;
             score =Number(score);
-
             var txt;
+
             if(score>=90){
                 txt="a학점입니다.";
             }else if(score>=80){
                 txt="B학점입니다.";
             }else if(score>=70){
                 txt="C학점입니다.";
-            } else (score>=60){
+            } else {
                 txt="D학점입니다.";
             }
             document.getElementById("result").innerHTML=txt;
