--- a/jquery/effect-ex3-toggle.html
+++ b/jquery/effect-ex3-toggle.html
@@ -7,19 +7,14 @@
     </style>
     <script>
         $(document).ready(function() {
-            $(h1).click(function(){
-                $(this).hide;
+            $("#btn1").click(function(){
+                $("h1").toggle(4000);
             });
-           
         });
     </script>
 </head>
 <body>
-<h1 >Lorem, ipsum.</h1>
-<h1 >Libero, ea!</h1>
-<h1 >Minima, velit!</h1>
-<h1 >Voluptates, esse.</h1>
-<h1 >Delectus, obcaecati.</h1>
-
+    <button id="btn1">TOGGLE </button>
+    <h1>Lorem, ipsum dolor.</h1>
 </body>
 </html>
