--- a/jquery/event-ex4-ready.html
+++ b/jquery/event-ex4-ready.html
@@ -7,19 +7,18 @@
     </style>
     <script>
         $(document).ready(function() {
-            $(h1).click(function(){
-                $(this).hide;
-            });
-           
+            console.log("dom loaded");
+            $("h1").click(function(){
+                $(this).hide();
+            })
         });
     </script>
 </head>
 <body>
-<h1 >Lorem, ipsum.</h1>
-<h1 >Libero, ea!</h1>
-<h1 >Minima, velit!</h1>
-<h1 >Voluptates, esse.</h1>
-<h1 >Delectus, obcaecati.</h1>
-
+  <h1 id="head1">Lorem.</h1>
+  <h1 id="head1">Corrupti.</h1>
+  <h1 id="head1">Corporis.</h1>
+  <h1 id="head1">Aperiam.</h1>
+  <h1 id="head1">Reiciendis?</h1>
 </body>
 </html>
